# sz-agent-lab

./: .gitignore  BOOK_EXPANSION_PLAN.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  _quarto.yml  agent_lab_real_book_expansion_plan.md  agentic_systems_lab_plan.md  index.qmd  pyproject.toml  references.bib
.github/: pull_request_template.md
appendices/: command-reference.qmd  eval-schema.qmd  evidence-reference-policy.qmd  further-reading.qmd  glossary.qmd  tool-policy-schema.qmd  trace-schema.qmd
chapters/: 01-from-llm-calls-to-agentic-systems.qmd  01-what-is-an-agent.qmd  02-workflows-before-agents.qmd  02-workflows-vs-agents.qmd  03-designing-tools.qmd  03-tools-and-state.qmd  04-building-a-repo-triage-agent.qmd  04-state-memory-and-context.qmd  05-building-the-repo-triage-agent.qmd  05-tracing-and-observability.qmd  06-evaluating-agents.qmd  06-tracing-runtime-evidence.qmd  07-evaluating-agents.qmd  07-guardrails-and-tool-policy.qmd  08-context-cost-and-inference.qmd  08-reports-production-evidence.qmd  09-guardrails-and-tool-policy.qmd  09-local-agents-with-mlx.qmd  10-production-readiness.qmd  10-prompt-injection-untrusted-tool-output.qmd  11-context-cost-and-inference.qmd  11-project-ideas.qmd  12-prompt-caching-prefix-stability.qmd  13-local-agents-with-mlx.qmd  14-production-readiness.qmd  15-capstone-agentprobe.qmd
docs/: command_reference.md
pdf/: code-blocks.tex
reports/: sample_eval_report.md  sample_production_report.md  sample_trace_report.md
scripts/: create_toy_repos.py  run_all_examples.py
styles/: catppuccin-macchiato.scss  (+1 more)
(+36 files in other folders)
